[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
valterm-chess = { git = "https://github.com/INDA24PlusPlus/valterm-chess" }
chess-networking = { git = "https://github.com/INDA24PlusPlus/chess-networking" }
ggez = "0.7"
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_derive = "1.0.210"
